cadastro finalizado (front-end)

--- a/cadastro.html
+++ b/cadastro.html
@@ -32,7 +32,7 @@
                         <input type="text" name="nome" id="nome" class="txt">
                     </div>
                     <div class="campo">
-                        <label for="sobrenome">SOBRENOME</label>
+                        <label for="sobrenome" class="sobrenome">SOBRENOME</label>
                         <input type="text" name="sobrenome" id="sobrenome" class="txt">
                     </div>
                 </fieldset>
