--- a/cadastro.html
+++ b/cadastro.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mestre</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/cadastro.css">
 </head>
 <body>
@@ -42,9 +42,9 @@
                 </div>
                 <div class="campo">
                     <label for="tipoplayer">VOCE DESEJA SER?</label>
-                    <label ><input type="radio" name="tipoplayer" value="player" checked> PLAYER</label>
-                    <label for=""><input type="radio" name="tipoplayer" value="mestre"> MESTRE</label>
-                    <label for=""><input type="radio" name="tipoplayer" value="playmestre"> PLAYER+MESTRE</label>
+                    <label for="player" ><input type="radio" name="tipoplayer" id="player" value="player" checked class="radio"> PLAYER</label>
+                    <label for="mestre"><input type="radio" name="tipoplayer" id="mestre" class="radio" value="mestre"> MESTRE</label>
+                    <label for="playmestre"><input type="radio" name="tipoplayer" id="playmestre" class="radio" value="playmestre"> PLAYER+MESTRE</label>
                 </div>
                 <div class="campo">
                     <label for="idade">IDADE</label>
