--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <header class="cabecalho">
         <a href="#" class="cabecalho-menu-logo"><img src="img/logo-p.png" class="logo-p" alt=""> MESTRE - RPG</a>
         <nav class="cabecalho-menu">
-            <a href="" class="cabecalho-menu-item">HOME</a>
-            <a href="" class="cabecalho-menu-item">SAIBA MAIS</a>
-            <a href="" class="cabecalho-menu-item">LOGIN/CADASTRO</a>
+            <a href="#" class="cabecalho-menu-item">HOME</a>
+            <a href="#" class="cabecalho-menu-item">SAIBA MAIS</a>
+            <a href="cadastro.html" class="cabecalho-menu-item">LOGIN/CADASTRO</a>
         </nav>
     </header>
 
